--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "redux": "^4.2.1",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zustand": "^4.4.1"
   }
 }
